--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "14         14     Thomas High School   Charter  1635  1043130"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 160,
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 163,
    "metadata": {
     "scrolled": true
    },
@@ -455,7 +455,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 167,
    "metadata": {
     "scrolled": false
    },
@@ -691,13 +691,612 @@
        "10             90          70  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "student_data_df[0:11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>School ID</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student ID     student_name gender grade        school_name  reading_score  \\\n",
+       "0           0     Paul Bradley      M   9th  Huang High School             66   \n",
+       "1           1     Victor Smith      M  12th  Huang High School             94   \n",
+       "2           2  Kevin Rodriguez      M  12th  Huang High School             90   \n",
+       "3           3    Richard Scott      M  12th  Huang High School             67   \n",
+       "4           4       Bonnie Ray      F   9th  Huang High School             97   \n",
+       "\n",
+       "   math_score  School ID      type  size   budget  \n",
+       "0          79          0  District  2917  1910635  \n",
+       "1          61          0  District  2917  1910635  \n",
+       "2          60          0  District  2917  1910635  \n",
+       "3          58          0  District  2917  1910635  \n",
+       "4          84          0  District  2917  1910635  "
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine the data into a single dataset.\n",
+    "school_data_complete_df = pd.merge(student_data_df, school_data_df, on=[\"school_name\", \"school_name\"])\n",
+    "school_data_complete_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_count = school_data_complete_df[\"student_name\"].count()\n",
+    "student_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_count = len(school_data_complete_df[\"school_name\"].unique())\n",
+    "school_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_budget = school_data_df[\"budget\"].sum()\n",
+    "school_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.87784018381414"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "average_reading_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.98537145774827"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
+    "average_math_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         True\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4         True\n",
+       "         ...  \n",
+       "39165     True\n",
+       "39166     True\n",
+       "39167     True\n",
+       "39168     True\n",
+       "39169     True\n",
+       "Name: math_score, Length: 39170, dtype: bool"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_math = school_data_complete_df[\"math_score\"] >=70\n",
+    "passing_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1         True\n",
+       "2         True\n",
+       "3        False\n",
+       "4         True\n",
+       "         ...  \n",
+       "39165     True\n",
+       "39166     True\n",
+       "39167     True\n",
+       "39168     True\n",
+       "39169     True\n",
+       "Name: reading_score, Length: 39170, dtype: bool"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_reading = school_data_complete_df[\"reading_score\"] >=70\n",
+    "passing_reading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID       29370\n",
+       "student_name     29370\n",
+       "gender           29370\n",
+       "grade            29370\n",
+       "school_name      29370\n",
+       "reading_score    29370\n",
+       "math_score       29370\n",
+       "School ID        29370\n",
+       "type             29370\n",
+       "size             29370\n",
+       "budget           29370\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all the students who are passing math in a new DataFrame.\n",
+    "passing_math = school_data_complete_df[school_data_complete_df[\"math_score\"] >= 70].count()\n",
+    "passing_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all the students who are passing reading in a new DataFrame.\n",
+    "passing_math = school_data_complete_df[school_data_complete_df[\"math_score\"] >= 70]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all the students who are passing math in a new DataFrame.\n",
+    "passing_reading = school_data_complete_df[school_data_complete_df[\"reading_score\"] >= 70]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29370"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_math_count = passing_math[\"student_name\"].count()\n",
+    "passing_math_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33610"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_reading_count = passing_reading[\"student_name\"].count()\n",
+    "passing_reading_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39170"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
+    "student_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_math_per = passing_math_count / student_count * 100\n",
+    "passing_math_per"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.80546336482001"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_reading_per = passing_reading_count / student_count * 100\n",
+    "passing_reading_per"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25528"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_math_reading = passing_math_reading[\"student_name\"].count()\n",
+    "passing_math_reading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65.17232575950983"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_both_per = passing_math_reading / student_count * 100\n",
+    "passing_both_per"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15           39170      24649428           78.985371   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0               81.87784       74.980853          85.805463          65.172326  "
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_summary_df = pd.DataFrame(\n",
+    "                    [{\"Total Schools\" : school_count,\n",
+    "                      \"Total Students\": student_count,\n",
+    "                        \"Total Budget\": school_budget,\n",
+    "                        \"Average Math Score\": average_math_score,\n",
+    "                        \"Average Reading Score\": average_reading_score,\n",
+    "                        \"% Passing Math\": passing_math_per,\n",
+    "                        \"% Passing Reading\": passing_reading_per,\n",
+    "                       \"% Overall Passing\": passing_both_per }])\n",
+    "district_summary_df\n"
    ]
   },
   {
