--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "14         14     Thomas High School   Charter  1635  1043130"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -455,7 +455,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 55,
    "metadata": {
     "scrolled": false
    },
@@ -691,7 +691,7 @@
        "10             90          70  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -832,7 +832,7 @@
        "4          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 168,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "39170"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "15"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "24649428"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "Name: math_score, Length: 39170, dtype: bool"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "Name: reading_score, Length: 39170, dtype: bool"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
        "29370"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "33610"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "39170"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
        "25528"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reorder the columns in the order you want them to appear.\n",
+    "new_column_order = [\"Total Schools\", \"Total Students\", \"Total Budget\",\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
+    "\n",
+    "# Assign district summary df the new column order.\n",
+    "district_summary_df = district_summary_df[new_column_order]\n",
+    "district_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1295,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,6 +1311,74 @@
     "                        \"% Passing Reading\": passing_reading_per,\n",
     "                       \"% Overall Passing\": passing_both_per }])\n",
     "district_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Schools             object\n",
+       "Total Students            object\n",
+       "Total Budget              object\n",
+       "Average Math Score        object\n",
+       "Average Reading Score     object\n",
+       "% Passing Math            object\n",
+       "% Passing Reading        float64\n",
+       "% Overall Passing        float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_summary_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def passing_math_percent(pass_math_count, student_count):\n",
+    "    return pass_math_count / float(student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passing_math_count = 29370\n",
+    "total_student_count = 39170"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.9808526933878"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passing_math_percent(passing_math_count, total_student_count)"
    ]
   },
   {
