--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 869,
    "metadata": {
     "scrolled": true
    },
@@ -1934,96 +1934,176 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
+       "      <th>39160</th>\n",
+       "      <td>39160</td>\n",
+       "      <td>Katie Weaver</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39161</th>\n",
+       "      <td>39161</td>\n",
+       "      <td>April Reyes</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39162</th>\n",
+       "      <td>39162</td>\n",
+       "      <td>Derek Weeks</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39163</th>\n",
+       "      <td>39163</td>\n",
+       "      <td>John Reese</td>\n",
+       "      <td>M</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39164</th>\n",
+       "      <td>39164</td>\n",
+       "      <td>Joseph Anthony</td>\n",
        "      <td>M</td>\n",
        "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Victor Smith</td>\n",
-       "      <td>M</td>\n",
+       "      <th>39165</th>\n",
+       "      <td>39165</td>\n",
+       "      <td>Donna Howard</td>\n",
+       "      <td>F</td>\n",
        "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Kevin Rodriguez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99.0</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Richard Scott</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <th>39166</th>\n",
+       "      <td>39166</td>\n",
+       "      <td>Dawn Bell</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
+       "      <th>39167</th>\n",
+       "      <td>39167</td>\n",
+       "      <td>Rebecca Tanner</td>\n",
        "      <td>F</td>\n",
        "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39168</th>\n",
+       "      <td>39168</td>\n",
+       "      <td>Desiree Kidd</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39169</th>\n",
+       "      <td>39169</td>\n",
+       "      <td>Carolyn Jackson</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>1043130</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Student ID     student_name gender grade        school_name  reading_score  \\\n",
-       "0           0     Paul Bradley      M   9th  Huang High School           66.0   \n",
-       "1           1     Victor Smith      M  12th  Huang High School           94.0   \n",
-       "2           2  Kevin Rodriguez      M  12th  Huang High School           90.0   \n",
-       "3           3    Richard Scott      M  12th  Huang High School           67.0   \n",
-       "4           4       Bonnie Ray      F   9th  Huang High School           97.0   \n",
+       "       Student ID     student_name gender grade         school_name  \\\n",
+       "39160       39160     Katie Weaver      F  11th  Thomas High School   \n",
+       "39161       39161      April Reyes      F  10th  Thomas High School   \n",
+       "39162       39162      Derek Weeks      M  12th  Thomas High School   \n",
+       "39163       39163       John Reese      M  11th  Thomas High School   \n",
+       "39164       39164   Joseph Anthony      M   9th  Thomas High School   \n",
+       "39165       39165     Donna Howard      F  12th  Thomas High School   \n",
+       "39166       39166        Dawn Bell      F  10th  Thomas High School   \n",
+       "39167       39167   Rebecca Tanner      F   9th  Thomas High School   \n",
+       "39168       39168     Desiree Kidd      F  10th  Thomas High School   \n",
+       "39169       39169  Carolyn Jackson      F  11th  Thomas High School   \n",
        "\n",
-       "   math_score  School ID      type  size   budget  \n",
-       "0        79.0          0  District  2917  1910635  \n",
-       "1        61.0          0  District  2917  1910635  \n",
-       "2        60.0          0  District  2917  1910635  \n",
-       "3        58.0          0  District  2917  1910635  \n",
-       "4        84.0          0  District  2917  1910635  "
+       "       reading_score  math_score  School ID     type  size   budget  \n",
+       "39160           89.0        86.0         14  Charter  1635  1043130  \n",
+       "39161           70.0        84.0         14  Charter  1635  1043130  \n",
+       "39162           94.0        77.0         14  Charter  1635  1043130  \n",
+       "39163           90.0        75.0         14  Charter  1635  1043130  \n",
+       "39164            NaN         NaN         14  Charter  1635  1043130  \n",
+       "39165           99.0        90.0         14  Charter  1635  1043130  \n",
+       "39166           95.0        70.0         14  Charter  1635  1043130  \n",
+       "39167            NaN         NaN         14  Charter  1635  1043130  \n",
+       "39168           99.0        90.0         14  Charter  1635  1043130  \n",
+       "39169           95.0        75.0         14  Charter  1635  1043130  "
       ]
      },
-     "execution_count": 798,
+     "execution_count": 869,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2031,7 +2111,7 @@
    "source": [
     "# Combine the data into a single dataset.\n",
     "school_data_complete_df = pd.merge(student_data_df, school_data_df, on=[\"school_name\", \"school_name\"])\n",
-    "school_data_complete_df.head()"
+    "school_data_complete_df.tail(10)"
    ]
   },
   {
@@ -6281,11 +6361,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Overall Charter schools passing % for both math & reading was decreased by 4%, the overall was decreased by 3%.  This also dropped Thomas High School down when you compare to schools alone.  it was the 'top' school when using the % passing data and after dropping 9th grade scores its now on the lower end.  however, as the NaN value doenst calcute into the avergage scores, you can still see that the aveagae scores for Thomas High School are in the top bracket.  So, utalizing all of these coluns in the output paints a more complete picture. "
+   ]
   }
  ],
  "metadata": {
